# darling-corecrypto

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  run_tests.sh  watch.sh
include/corecrypto/: cc.h  cc_debug.h  cc_priv.h  ccchacha20poly1305.h  ccdh.h  ccdh_gp.h  ccdigest.h  ccec.h  ccec25519.h  ccecies.h  cch2c.h  cchkdf.h  cchmac.h  ccmd2.h  ccmd4.h  ccmd5.h  ccmode.h  ccmode_factory.h  ccmode_impl.h  ccn.h  ccrsa.h  ccrsa_priv.h  ccsha1.h  ccsha2.h  ccsrp.h  ccwrap_priv.h  ccz.h  cczp.h
include/corecrypto/private/: ccaes_extra.h  ccgcm.h  ccstubs.h
scripts/: exported-symbols.exp  generate-test-data.py
src/: .cczp.c.swp  cc.c  ccaes.c  ccaes_extra.c  ccansikdf.c  ccblowfish.c  cccast.c  ccchacha20poly1305.c  cccmac.c  ccder.c  ccdes.c  ccdh.c  ccdh_gp.c  ccdigest.c  ccec.c  ccec_projective_point.c  ccecies.c  ccgcm.c  cch2c.c  cchkdf.c  cchmac.c  ccmd2.c  ccmd4.c  ccmd5.c  ccmode.c  ccn.c  ccn_extra.c  ccnistkdf.c  ccpad.c  ccpbkdf2.c  ccrc2.c  ccrc4.c  ccripemd.c  ccrng.c  ccrng_pbkdf2.c  ccrng_system.c  ccrsa.c  ccrsa_priv.c  ccsha1.c  ccsha2.c  (+5 more)
tests/: CMakeLists.txt  cc_priv_tests.c  cc_tests.c  ccaes_tests.c  ccdes_tests.c  ccdigest_tests.c  ccn_tests.c  cczp_tests.c  main.c
tests/include/libkern/: OSByteOrder.h
